..F....... [ZBXNEXT-10053] fixed items massupdate preprocessing Custom on fail fields vertical alignment

--- a/sass/stylesheets/sass/_screen.scss
+++ b/sass/stylesheets/sass/_screen.scss
@@ -3384,6 +3384,7 @@ svg {
 		align-items: flex-start;
 		padding-right: $on-fail-width + $action-width + 5px;
 		margin-top: 6px;
+		line-height: 24px;
 
 		> label {
 			padding-top: 0;
